--- a/star-wars/assets/css/style.css
+++ b/star-wars/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;700&family=Koulen&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -6,6 +7,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;700&family=Koulen&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -384,7 +386,7 @@ template {
 }
 
 .header-container .header-logo {
-  background-image: url("../img/Star_Wars_Yellow_Logo.svg.png");
+  background-image: url("../img/Star-Wars-Logo-Transparent-Background.png");
   width: 150px;
   height: 50px;
   background-size: 100% 100%;
@@ -402,8 +404,9 @@ template {
   cursor: pointer;
   color: #d3d3d3;
   font-weight: 700;
-  font-size: 12px;
-  font-family: "Georgia Regular";
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-family: "Koulen", cursive;
   -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
@@ -416,8 +419,8 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #d3d3d3;
   font-family: "Georgia Regular";
+  color: #d3d3d3;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
@@ -440,13 +443,24 @@ template {
           column-gap: 20px;
 }
 
+.settings .settings-sort p {
+  color: #d3d3d3;
+}
+
 .settings .settings-sort span {
+  color: rgba(98, 96, 96, 0.8);
   font-size: 16px;
   cursor: pointer;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+}
+
+.settings .settings-sort span:hover {
+  color: white;
 }
 
 .settings .settings-sort span.active {
-  color: #ffff00;
+  color: white;
 }
 
 .settings .settings-sort .btn-favourite-basket {
@@ -465,19 +479,26 @@ template {
 }
 
 .settings .settings-view span {
+  color: rgba(98, 96, 96, 0.8);
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
   font-size: 24px;
   cursor: pointer;
 }
 
+.settings .settings-view span:hover {
+  color: white;
+}
+
 .settings .settings-view span.active {
-  color: #ffff00;
+  color: white;
 }
 
 .select {
   cursor: pointer;
   display: block;
   font-size: 12px;
-  font-family: "Georgia Regular";
+  font-family: "IBM Plex Sans Thai Looped";
   font-weight: 500;
   color: #d3d3d3;
   line-height: 1.3;
@@ -528,7 +549,6 @@ template {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 15px;
-  height: 90vh;
 }
 
 .wrapper-films.block {
@@ -536,7 +556,7 @@ template {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 10px;
+  grid-row-gap: 30px;
   -ms-grid-column: 40;
   grid-column: 40px;
   width: 100%;
@@ -565,10 +585,6 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 30px;
-  -webkit-box-shadow: #d3d3d3 1.95px 1.95px 2.6px;
-          box-shadow: #d3d3d3 1.95px 1.95px 2.6px;
-  border-radius: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -579,16 +595,15 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-color: black;
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
-  width: 275px;
-  min-height: 260px;
+  background-color: rgba(98, 96, 96, 0.4);
+  width: 350px;
+  row-gap: 30px;
+  padding-bottom: 30px;
 }
 
 .wrapper-films.block .container-img {
   width: 100%;
-  height: 150px;
+  height: 250px;
   background-image: url("../img/loader.gif");
   background-size: 100% 100%;
 }
@@ -597,31 +612,33 @@ template {
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
 }
 
 .wrapper-films.block .film-discription {
   color: #d3d3d3;
-  font-family: "Georgia Regular";
+  width: 100%;
+  padding-left: 30px;
+  font-family: "IBM Plex Sans Thai Looped";
 }
 
 .wrapper-films.block .film-discription h6 {
-  text-align: center;
+  font-family: "Koulen", cursive;
+  text-transform: uppercase;
   font-size: 20px;
-  color: #ffff00;
   font-weight: normal;
 }
 
 .wrapper-films.block .film-discription p {
-  font-size: 12px;
+  font-size: 14px;
   margin-top: 5px;
+  letter-spacing: 1px;
 }
 
 .wrapper-films.table {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
   justify-items: center;
   row-gap: 10px;
 }
@@ -636,51 +653,78 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
 }
 
 .wrapper-films.table .film-content {
-  padding: 10px 30px;
-  -webkit-box-shadow: #d3d3d3 1.95px 1.95px 2.6px;
-          box-shadow: #d3d3d3 1.95px 1.95px 2.6px;
-  border-radius: 30px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: rgba(98, 96, 96, 0.6);
   -webkit-column-gap: 30px;
           column-gap: 30px;
-  background-color: black;
-  width: 500px;
+}
+
+.wrapper-films.table .film-content .button-like {
+  position: absolute;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: black;
+  top: 15px;
+  right: 15px;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+}
+
+.wrapper-films.table .film-content .button-like:hover {
+  color: white;
+}
+
+.wrapper-films.table .film-content .button-like.active {
+  color: white;
 }
 
 .wrapper-films.table .container-img {
   width: 220px;
   height: 150px;
+  background-image: url("../img/loader.gif");
+  background-size: 100% 100%;
 }
 
 .wrapper-films.table .container-img img {
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
-  background-image: url("../img/loader.gif");
-  background-size: 100% 100%;
 }
 
 .wrapper-films.table .film-discription {
   color: #d3d3d3;
-  font-family: "Georgia Regular";
+  font-family: "IBM Plex Sans Thai Looped";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .wrapper-films.table .film-discription h6 {
-  text-align: center;
-  font-size: 18px;
-  color: #ffff00;
+  font-family: "Koulen", cursive;
+  font-size: 20px;
   font-weight: normal;
 }
 
 .wrapper-films.table .film-discription p {
-  font-size: 10px;
+  font-size: 14px;
   margin-top: 5px;
+  letter-spacing: 1px;
 }
 
 .film-content {
@@ -693,7 +737,7 @@ template {
   border: none;
   background: none;
   cursor: pointer;
-  color: #d3d3d3;
+  color: black;
   bottom: 15px;
   right: 15px;
   -webkit-transition: color 0.2s;
@@ -701,11 +745,11 @@ template {
 }
 
 .film-content .button-like:hover {
-  color: #ffff00;
+  color: white;
 }
 
 .film-content .button-like.active {
-  color: #ffff00;
+  color: white;
 }
 
 .loader-div {
@@ -719,10 +763,486 @@ template {
   opacity: 0.5;
 }
 
+.popup-pets {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/bg.jpg");
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.popup-pets.visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.popup__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 500px;
+  width: 900px;
+}
+
+.popup-content {
+  position: relative;
+}
+
+.popup-content-films {
+  height: 500px;
+  overflow-y: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  row-gap: 10px;
+  width: 900px;
+  overflow-y: scroll;
+}
+
+.popup-close {
+  top: -36px;
+  right: -36px;
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  background-color: #4c4c4c;
+  background-image: url("../icons/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+  z-index: 3;
+  cursor: pointer;
+}
+
+.popup-close:hover {
+  background-color: white;
+}
+
+.popup-content img {
+  display: block;
+  width: 220px;
+  height: 150px;
+}
+
+.popup-content-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  background-color: rgba(98, 96, 96, 0.8);
+  padding: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  text-align: justify;
+  border-radius: 15px;
+}
+
+.popup-item-description {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.film-discription {
+  color: white;
+}
+
+.film-discription h6 {
+  font-family: "Koulen", cursive;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.film-discription p {
+  letter-spacing: 1px;
+  font-family: "IBM Plex Sans Thai Looped";
+}
+
+h2 {
+  font-family: "Koulen", cursive;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 2px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.film-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
+}
+
+.film-main .left {
+  width: 25%;
+}
+
+.film-main .centre {
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.film-main .right {
+  width: 15%;
+}
+
+h1 {
+  font-family: "Koulen", cursive;
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.centre-film-description {
+  color: white;
+  text-align: justify;
+  font-family: "IBM Plex Sans Thai Looped";
+  margin-top: 15px;
+}
+
+.link-on-film {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  background-color: orange;
+  padding: 5px 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  color: white;
+  border-radius: 15px;
+  font-family: "Koulen", cursive;
+}
+
+.btn-control {
+  margin-top: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btn-like {
+  border: none;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  color: white;
+  height: 38px;
+  width: 38px;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+}
+
+.btn-like:hover {
+  background-color: white;
+  color: black;
+}
+
+.btn-like span {
+  font-size: 20px;
+}
+
+.btn-like.active {
+  background-color: white;
+  color: black;
+}
+
+h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: white;
+  text-align: center;
+  font-family: "Koulen", cursive;
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+
+.wrapper-actors {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  row-gap: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.wrapper-actors .actor-item {
+  width: 132px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(98, 96, 96, 0.5);
+  row-gap: 5px;
+  padding: 10px 5px;
+  height: 200px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.wrapper-actors .actor-item h6 {
+  color: white;
+  font-size: 16px;
+  text-align: center;
+  font-family: "IBM Plex Sans Thai Looped";
+}
+
+.wrapper-actors .actor-item .wrapper-img {
+  width: 80%;
+  background-image: url("../img/preloaders/loader.gif");
+  background-size: 30% 30%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.wrapper-actors .actor-item .wrapper-img .actor-item-img {
+  width: 100px;
+  height: 100px;
+}
+
+.wrapper-actors .actor-item .link-actor {
+  display: block;
+  width: 100%;
+  color: white;
+  background-color: orange;
+  padding: 5px 25px;
+  border-radius: 30px;
+  text-align: center;
+  font-family: "Koulen", cursive;
+  font-weight: normal;
+  letter-spacing: 2px;
+  font-size: 12px;
+}
+
+.load-actors {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 5px 20px;
+  color: white;
+  background-color: orange;
+  text-align: center;
+  font-family: "Koulen", cursive;
+  font-weight: normal;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.left-img {
+  height: 250px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 15px;
+}
+
+.left-img-poster {
+  position: relative;
+  margin-top: 30px;
+  height: 200px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.trailer {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  background-color: orange;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 5px;
+          column-gap: 5px;
+  color: white;
+  border-radius: 15px;
+  font-family: "Koulen", cursive;
+  padding: 5px 15px;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.popup-video {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(98, 96, 96, 0.8);
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.video-wrapper {
+  position: relative;
+}
+
+.popup-video.visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.right h3 {
+  color: white;
+  font-family: "Koulen", cursive;
+  font-weight: normal;
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-image: url("../img/bg1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.loader img {
+  display: block;
+  width: 200px;
+  height: 200px;
+}
+
+.disppear {
+  -webkit-animation: vanish 1s forwards;
+          animation: vanish 1s forwards;
+}
+
+@-webkit-keyframes vanish {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes vanish {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 body {
   background-image: url("../img/bg1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 .container {
