--- a/star-wars/assets/sass/_wrapper-films.scss
+++ b/star-wars/assets/sass/_wrapper-films.scss
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;700&family=Koulen&display=swap");
 .wrapper-films.block {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 10px;
+  grid-row-gap: 30px;
   grid-column: 40px;
   width: 100%;
   .film-poster {
@@ -16,20 +17,17 @@
   }
   .film-content {
     align-items: center;
-    padding: 10px 30px;
-    box-shadow: $light-grey 1.95px 1.95px 2.6px;
-    border-radius: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: black;
-    column-gap: 5px;
-    width: 275px;
-    min-height: 260px;
+    background-color: rgba(98, 96, 96, 0.4);
+    width: 350px;
+    row-gap: 30px;
+    padding-bottom: 30px;
   }
   .container-img {
     width: 100%;
-    height: 150px;
+    height: 250px;
     background-image: url("../img/loader.gif");
     background-size: 100% 100%;
   }
@@ -37,28 +35,30 @@
     display: block;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
   }
 
   .film-discription {
     color: $light-grey;
-    font-family: $georgia;
+    width: 100%;
+    padding-left: 30px;
+    font-family: "IBM Plex Sans Thai Looped";
     h6 {
-      text-align: center;
+      font-family: "Koulen", cursive;
+      text-transform: uppercase;
       font-size: 20px;
-      color: $yellow-active;
       font-weight: normal;
     }
     p {
-      font-size: 12px;
+      font-size: 14px;
       margin-top: 5px;
+      letter-spacing: 1px;
     }
   }
 }
 
 .wrapper-films.table {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   justify-items: center;
   row-gap: 10px;
   .film-poster {
@@ -68,41 +68,58 @@
   }
   .film {
     display: flex;
+    width: 100%;
   }
   .film-content {
-    padding: 10px 30px;
-    box-shadow: $light-grey 1.95px 1.95px 2.6px;
-    border-radius: 30px;
+    width: 100%;
     display: flex;
+    background-color: rgba(98, 96, 96, 0.6);
     column-gap: 30px;
-    background-color: black;
-    width: 500px;
+    .button-like {
+      position: absolute;
+      outline: none;
+      border: none;
+      background: none;
+      cursor: pointer;
+      color: black;
+      top: 15px;
+      right: 15px;
+      transition: color 0.2s;
+    }
+    .button-like:hover {
+      color: white;
+    }
+    .button-like.active {
+      color: white;
+    }
   }
   .container-img {
     width: 220px;
     height: 150px;
+    background-image: url("../img/loader.gif");
+    background-size: 100% 100%;
   }
 
   .container-img img {
     display: block;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    background-image: url("../img/loader.gif");
-    background-size: 100% 100%;
   }
   .film-discription {
     color: $light-grey;
-    font-family: $georgia;
+    font-family: "IBM Plex Sans Thai Looped";
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     h6 {
-      text-align: center;
-      font-size: 18px;
-      color: $yellow-active;
+      font-family: "Koulen", cursive;
+      font-size: 20px;
       font-weight: normal;
     }
     p {
-      font-size: 10px;
+      font-size: 14px;
       margin-top: 5px;
+      letter-spacing: 1px;
     }
   }
 }
@@ -114,16 +131,16 @@
     border: none;
     background: none;
     cursor: pointer;
-    color: $light-grey;
+    color: black;
     bottom: 15px;
     right: 15px;
     transition: color 0.2s;
   }
   .button-like:hover {
-    color: $yellow-active;
+    color: white;
   }
   .button-like.active {
-    color: $yellow-active;
+    color: white;
   }
 }
 
